Fix allowing list container to grow vertically with list and align page navigation buttons to right

--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -71,7 +71,7 @@
 .list-pagination {
   height: initial;
   line-height: initial;
-  padding: 25px;
+  padding: 25px 0 25px 25px;
   box-shadow: none;
 }
 .oxd-button {
